--- a/index.css
+++ b/index.css
@@ -147,8 +147,6 @@ label {
 
 
 
-
-
 /* -------------------------часть 3---------------------*/
 #field3 {
   width: 400px;
@@ -181,4 +179,27 @@ label {
   padding-top: 8%;
   padding-bottom: 5%;
   padding-left: 4%;
+}
+
+
+
+
+.field {
+  position: relative;
+  margin: auto;
+}
+
+.field div {
+  position: absolute;
+  width: 100%;
+}
+
+
+#task4 {
+  padding: 20px;
+  border: double 10px;
+  height: 400px;
+  width: 600px;
+  background-color: rgb(0, 0, 0);
+  margin: auto;
 }
